--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,9 @@ on:
     branches:
       - master
       - minimal_go_server
-name: Test
+name: BuildPush
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
@@ -20,3 +20,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Test
         run: go test ./...
+      - name: BuildPush
+        if: success()
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          repository: romankrajewski/visense
+          tags: latest
