--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,21 @@
-# https://medium.com/analytics-vidhya/getting-started-with-postgresql-using-docker-compose-34d6b808c47c
 version: '3'
 services:
   database:
+    # https://medium.com/analytics-vidhya/getting-started-with-postgresql-using-docker-compose-34d6b808c47c
     image: "postgres" # use latest official postgres version
     env_file:
       - database.env # configure postgres
     volumes:
-      - ./database/:/var/lib/postgresql/data/ # persist data even if container shuts down (data is saved to ./database)
+      - database-volume:/var/lib/postgresql/data/ # persist data even if container shuts down (data is saved to ./database)
+
+  web:
+    image: romankrajewski/visense:latest
     ports:
-      - "32300:5432"
+      - "8080:8080"
+    depends_on:
+      - database
+    env_file:
+      - database.env #configure db access
+
+volumes:
+  database-volume:
