--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -4,5 +4,4 @@ services:
     image: containrrr/watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /root/.docker/config.json:/config.json
-    command: --interval 300 #check for updates every 5 minutes
+    command: --interval 300 #check for updates every 5 min
