changed minimal-go-server branch to dev

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,11 @@ on:
   push:
     branches:
       - master
-      - minimal_go_server
+      - dev
   pull_request:
     branches:
       - master
-      - minimal_go_server
+      - dev
 name: BuildPush
 jobs:
   build:
