--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -39,6 +39,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
       -ldflags='-w -s -extldflags "-static"' -a \
       -o /go/bin/hello .
 
+FROM romankrajewski/visense-frontend:latest AS frontend
 ############################
 # STEP 2 build a small image
 ############################
@@ -50,9 +51,10 @@ COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/group /etc/group
 
+# Copy our frontend static files
+COPY --from=frontend /static /static
 # Copy our static executable
 COPY --from=builder /go/bin/hello /go/bin/hello
-
 # Use an unprivileged user.
 USER appuser:appuser
 
