Refactor build process The frontend is now loaded as seperate service with a volume shared with the web service, that contains the static files needed for vue. There are also env files for the web service for both local and production environment

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,3 +3,10 @@ services:
   web:
     build: ./app # use this line to build the app locally
     image: visense-dev
+    env_file:
+      - webserver_local.env
+      - database.env
+
+  frontend: #only used for copying the public files to the volume so the go server can serve them
+    build: ../vi-sense-frontend/
+    image: visense-frontend-dev
