--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -1,7 +1,14 @@
-version: '3'
+version: '3.7'
 services:
   watchtower: #service that automatically checks for new docker images. not needed if you run this app locally.
     image: containrrr/watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --interval 300 #check for updates every 5 min
+
+  frontend:
+    ports:
+      - "8081:8081"
+    environment:
+      - STATIC_DIR=/static
+      - PORT=8081
