introduce env vars to specify frontend dir in dev and frontend port in production

--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -8,7 +8,7 @@ services:
 
   frontend:
     ports:
-      - "8081:8081"
+      - "8081:${FRONTEND_PORT}"
     environment:
       - STATIC_DIR=/static
       - PORT=8081
