--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 services:
   database:
     # https://medium.com/analytics-vidhya/getting-started-with-postgresql-using-docker-compose-34d6b808c47c
@@ -19,5 +19,9 @@ services:
     env_file:
       - database.env #configure db access
 
+  frontend:
+    image: romankrajewski/visense-frontend:latest
+    ports:
+      - "8081:8081"
 volumes:
   database-volume:
