--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -8,7 +8,7 @@ services:
 
   frontend:
     ports:
-      - 8081:${FRONTEND_PORT}
+      - ${FRONTEND_PORT}:8081
     environment:
       - STATIC_DIR=/static
       - PORT=8081
