stop using unprivileged user inside docker container

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -53,7 +53,7 @@ COPY --from=builder /etc/group /etc/group
 # Copy our static executable
 COPY --from=builder /go/bin/hello /go/bin/hello
 # Use an unprivileged user.
-USER appuser:appuser
+#USER appuser:appuser
 
 # Run the hello binary.
 ENTRYPOINT ["/go/bin/hello"]
