implemented gzip middleware (only when hosted on server)
integrated backend.env file with configuration information

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - database
     env_file:
       - database.env #configure db access
+      - backend.env
 
   frontend:
     image: romankrajewski/visense-frontend:latest
